Update the misc library. Nothing else is ready, breaks the build.

--- a/misc/Makefile
+++ b/misc/Makefile
@@ -2,14 +2,14 @@
 AR = ar
 
 # Intel compiler needed the following definition for the archiver:
-# AR = xiar
+#AR = xiar
 
 ARFLAGS = r
 
 RANLIB = ranlib
 
 # include norm2.o below, if your compiler is missing that intrinsic
-OBJECTS = ReadHeader.o beampatternMod.o MathConstantsMod.o RefCoMod.o SdRdRMod.o sspMod.o WriteHeader.o errout.o interpMod.o MergeVectors.o munk.o ReadEnvironment.o SortMod.o splinec.o subtabulate.o twersky.o weight.o xerror.o norms.o cross_products.o monotonicMod.o PolyMod.o crci.o PekerisRoot.o
+OBJECTS = FatalError.o beampattern.o MathConstants.o RefCoef.o SourceReceiverPositions.o  pchipMod.o AttenMod.o sspMod.o RWSHDFile.o interpolation.o MergeVectorsMod.o munk.o ReadEnvironmentMod.o SortMod.o splinec.o subtabulate.o calculateweights.o norms.o cross_products.o monotonicMod.o PolyMod.o PekRoot.o RootFinderSecantMod.o
 
 all: libmisc.a
 
@@ -42,30 +42,37 @@ libmisc.a: $(OBJECTS)
 subtabultate.o subtabulate.mod: subtabulate.f90
 	$(FC) -c $(FFLAGS) $<
 
-SdRdRMod.o sdrdrmod.mod: SdRdRMod.f90 monotonicmod.mod sortmod.mod subtabulate.mod
-	$(FC) -c $(FFLAGS) $< 
+calculateweights.o calculateweights.mod: calculateweights.f90
+	$(FC) -c $(FFLAGS) $<
 
-ReadHeader.o: sdrdrmod.mod ReadHeader.f90
+RootFinderSecantMod.o rootfindersecantmod.mod: RootFinderSecantMod.f90
+	$(FC) -c $(FFLAGS) $<
+
+SourceReceiverPositions.o sourcereceiverpositions.mod: SourceReceiverPositions.f90 monotonicmod.mod sortmod.mod subtabulate.mod
+	$(FC) -c $(FFLAGS) $< 
 
 PolyMod.o polymod.mod: PolyMod.f90
 	$(FC) -c $(FFLAGS) $< 
 
-crci.o: crci.f90 MathConstantsMod.mod
+AttenMod.o: AttenMod.f90 MathConstants.mod
 	$(FC) -c $(FFLAGS) $<
 
-beampatternMod.o beampatternmod.mod: beampatternMod.f90
+beampattern.o beampattern.mod: beampattern.f90 fatalerror.mod
 	$(FC) -c $(FFLAGS) $<
 
-interpMod.o interpmod.mod: interpMod.f90
+interpolation.o interpolation.mod: interpolation.f90
 	$(FC) -c $(FFLAGS) $<
 
-MathConstantsMod.o mathconstantsmod.mod: MathConstantsMod.f90
+MathConstants.o mathconstants.mod: MathConstants.f90
 	$(FC) -c $(FFLAGS) $< 
 
-RefCoMod.o refcomod.mod: RefCoMod.f90 polymod.mod
+RefCoef.o refcoef.mod: RefCoef.f90 polymod.mod
 	$(FC) -c $(FFLAGS) $< 
 
-sspMod.o sspmod.mod: sspMod.f90
+sspMod.o sspmod.mod: sspMod.f90 pchipmod.mod attenmod.mod
+	$(FC) -c $(FFLAGS) $< 
+
+pchipMod.o pchipmod.mod: pchipMod.f90
 	$(FC) -c $(FFLAGS) $< 
 
 monotonicMod.o monotonicmod.mod: monotonicMod.f90
@@ -74,21 +81,23 @@ monotonicMod.o monotonicmod.mod: monotonicMod.f90
 SortMod.o sortmod.mod: SortMod.f90
 	$(FC) -c $(FFLAGS) $< 
 
-PekerisRoot.o: PekerisRoot.f90
+PekRoot.o pekroot.mod : PekRoot.f90
 
-WriteHeader.o: WriteHeader.f90 SdRdRMod.mod
-errout.o: errout.f90
-MergeVectors.o: MergeVectors.f90
+RWSHDFile.o: RWSHDFile.f90 sourcereceiverpositions.mod
+
+FatalError.o fatalerror.mod: FatalError.f90
+
+MergeVectorsMod.o: MergeVectorsMod.f90
+
 munk.o: munk.f90
+
 norms.o norms.mod: norms.f90
 	$(FC) -c $(FFLAGS) $< 
 
+ReadEnvironmentMod.o readenvironmentmod.mod: ReadEnvironmentMod.f90 sspmod.mod
 
-readenvmod.mod ReadEnvironment.o: ReadEnvironment.f90 sspMod.mod
 splinec.o: splinec.f90
-twersky.o: twersky.f90
-weight.o: weight.f90
-xerror.o: xerror.f90
+
 cross_products.o cross_products.mod: cross_products.f90
 	$(FC) -c $(FFLAGS) $< 
 
