Updated the Scooter directory.

--- a/Scooter/Makefile
+++ b/Scooter/Makefile
@@ -1,13 +1,14 @@
 
-EXECUTABLES = fields.exe scooter.exe sparc.exe
+EXECUTABLES = scooter.exe sparc.exe
 
-FIELDS_OBJECTS = fields.o TransformG.o pade.o ../misc/libmisc.a
-FIELDS_LIBS = -L../tslib -lts -L../misc -lmisc
+# fields.f90 is being discontinued here in favor of the Matlab version mbp: 2020/10
+#FIELDS_OBJECTS = fields.o TransformG.o pade.o ../misc/libmisc.a
+#FIELDS_LIBS = -L../tslib -lts -L../misc -lmisc
 
-SCOOTER_OBJECTS = scooter.o factorNPZ.o ScooterMod.o ../misc/libmisc.a
+SCOOTER_OBJECTS = factor_Mod.o backsub_Mod.o scooter.o ../misc/libmisc.a
 SCOOTER_LIBS = -L../tslib -lts -L../misc -lmisc
 
-SPARC_OBJECTS = sparc.o factorNP.o SparcMod.o ../misc/libmisc.a
+SPARC_OBJECTS = factor_Mod.o backsub_Mod.o sparc.o ../tslib/sourceMod.o ../misc/libmisc.a ../tslib/libts.a
 SPARC_LIBS = -L../tslib -lts -L../misc -lmisc
 
 all: $(EXECUTABLES)
@@ -38,8 +39,8 @@ clean:
 
 # Declare explicit dependencies (and explicit build rules as needed)
 
-fields.exe: $(FIELDS_OBJECTS)
-	$(FC) -o $@ $(FFLAGS) $(FIELDS_OBJECTS) $(FIELDS_LIBS)
+#fields.exe: $(FIELDS_OBJECTS)
+#	$(FC) -o $@ $(FFLAGS) $(FIELDS_OBJECTS) $(FIELDS_LIBS)
 
 scooter.exe: $(SCOOTER_OBJECTS)
 	$(FC) -o $@ $(FFLAGS) $(SCOOTER_OBJECTS) $(SCOOTER_LIBS)
@@ -47,19 +48,17 @@ scooter.exe: $(SCOOTER_OBJECTS)
 sparc.exe: $(SPARC_OBJECTS)
 	$(FC) -o $@ $(FFLAGS) $(SPARC_OBJECTS) $(SPARC_LIBS)
 
-ScooterMod.o scootermod.mod: ScooterMod.f90
-	$(FC) -c $(FFLAGS) $< 
-
-SparcMod.o sparcmod.mod: SparcMod.f90
-	$(FC) -c $(FFLAGS) $< 
-
-factorNP.o: factorNP.f90
+#factorNP.o: factorNP.f90
 factorNPZ.o: factorNPZ.f90
 
-fields.o: fields.f90
-TransformG.o: TransformG.f90
-pade.o: pade.f90
+factor_Mod.o factor_Mod.mod: factor_Mod.f90
+	$(FC) -c $(FFLAGS) $< 
 
-scooter.o: scootermod.mod scooter.f90
-sparc.o: sparcmod.mod sparc.f90
+#fields.o: fields.f90
+#TransformG.o: TransformG.f90
+#pade.o: pade.f90
+
+scooter.o: scooter.f90
+
+sparc.o: sparc.f90
 
