Fix the problem of repeated builds: module names are low-case. If a Makefile uses a camel-case name (like in ReadModes.mod), the corresponding file is never created, and not found by make, causing incessant rebuilds.

--- a/misc/Makefile
+++ b/misc/Makefile
@@ -54,7 +54,7 @@ SourceReceiverPositions.o sourcereceiverpositions.mod: SourceReceiverPositions.f
 PolyMod.o polymod.mod: PolyMod.f90
 	$(FC) -c $(FFLAGS) $< 
 
-AttenMod.o: AttenMod.f90 MathConstants.mod
+AttenMod.o: AttenMod.f90 mathconstants.mod
 	$(FC) -c $(FFLAGS) $<
 
 beampattern.o beampattern.mod: beampattern.f90 fatalerror.mod
